--- a/src/styles/css/pages/NavBar.module.css
+++ b/src/styles/css/pages/NavBar.module.css
@@ -79,9 +79,8 @@
   }
 
   .product__list_item_name {
-    position: absolute;
-    left: 46px;
-    top: 6px;
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: black;
   }
@@ -169,9 +168,8 @@
   }
 
   .product__list_item_name {
-    position: absolute;
-    left: 46px;
-    top: 6px;
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: black;
   }
@@ -255,9 +253,8 @@
     }
   
     .product__list_item_name {
-      position: absolute;
-      left: 46px;
-      top: 6px;
+      display: flex;
+      align-items: center;
       text-decoration: none;
       color: black;
     }
@@ -351,9 +348,8 @@
   }
 
   .product__list_item_name {
-    position: absolute;
-    left: 46px;
-    top: 6px;
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: black;
   }
