--- a/src/styles/css/components/Banner/MainBanTwo.module.css
+++ b/src/styles/css/components/Banner/MainBanTwo.module.css
@@ -181,3 +181,64 @@
     font-weight: 700;
   }
 }
+
+/* 아이폰 SE  */
+@media screen and (max-width: 576px) {
+  .bantwo {
+    position: relative;
+    max-width: 1200px;
+    width: 100%;
+    height: 530px;
+    margin: 0 auto;
+  }
+  
+  .bantwo_eve {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  } 
+  
+  .bantwo_pro {
+    display: flex;
+    margin-left: 10px;
+  }
+  .bantwo_img {
+    z-index: 10;
+    height: 195px;
+  }
+  
+  .bantwo_img_1 {
+    width: 140px;
+    height: 140px;
+    border-radius: 19px;
+  }
+  
+  .bantwo_info {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+    width: 200px;
+    height: 139px;
+    margin-left: -57px;
+    background-color: whitesmoke;
+    border-radius: 19px;
+    font-family: 'Noto Sans KR', sans-serif;
+  
+  }
+  
+  .info1 {
+    font-size: 11px;
+    color: crimson;
+    font-weight: 700;
+  }
+  
+  .info2 {
+    font-size: 16px;
+  }
+  
+  .info3 {
+    font-size: 16px;
+    font-weight: 700;
+  }
+}
